# ndice

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  release.yml
assets/: banner.afdesign
src/: bin.rs  lib.rs  main.rs  structs.rs
src/ndice/: structs.rs
